--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </nav>
         </div>
         <div class="image">
-          <img src="dev1.png" alt="Illustration" />
+          <img src="dev.png" alt="illustration" />
         </div>
       </div>
     </header>
