--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
     <section id="contact" data-aos="fade-up">
       <div class="container">
         <h2>Contact</h2>
-        <form action="https://formspree.io/f/xdkzljag" method="POST">
+        <form action="https://api.web3forms.com/submit" method="POST">
+          <input type="hidden" name="access_key" value="2033e8b5-628f-4b04-8c7c-40dfff7673a8">
           <input type="text" name="name" placeholder="Your Name" required />
           <input
             type="email"
