--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <input type="text" name="name" placeholder="Your Name" required />
           <input
             type="email"
-            name="_replyto"
+            name="Email"
             placeholder="Your Email"
             required
           />
