--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of Uttam Siravi. A web developer who can only make websites using HTML." />
     <meta name="author" content="Uttam Siravi" />
-    <link rel="dev.png" type="image/x-icon" />
+    <link rel="icon" href="dev.png" type="image/x-icon" />
     <title>Uttam Siravi | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
