--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <h2>Contact</h2>
         <form action="https://api.web3forms.com/submit" method="POST">
           <input type="hidden" name="access_key" value="2033e8b5-628f-4b04-8c7c-40dfff7673a8" />
-          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="text" name="name" placeholder="Your Name" autocomplete="name" required />
           <input
             type="email"
             name="email"
             placeholder="Your Email"
+            autocomplete="email"
             required
           />
           <textarea
