--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <button class="filter-btn" data-filter="design">Design</button>
         </div>
         <div class="grid">
+          <a href="https://uttamandajay.github.io/GPC-Website/" target="_blank" class="project-link">
           <div class="card" data-category="web">
               <h3>Green Plant Corporation</h3>
               <p>A website I made with the help of ChatGPT.</p>
