--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
         </div>
         <div class="grid">
           <div class="card" data-category="web">
+            <a href="https://uttamandajay.github.io/GPC-Website/" target="_blank" class="project-link">
               <h3>Green Plant Corporation</h3>
               <p>A website I made with the help of ChatGPT.</p>
+            </a>
             </div>
           <div class="card" data-category="design">
             <h3>Designed Webpage</h3>
