--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="canonical" href="https://example.com"/>
+    <link rel="canonical" href="https://devuttamportfolio.pages.dev"/>
   </head>
   <body>
     <header>
