--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </nav>
         </div>
         <div class="image">
-          <img src="dev.png" alt="illustration" />
+          <img src="dev.png" alt="illustration" width="500" />
         </div>
       </div>
     </header>
