--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio of Uttam Siravi. A web developer who can only make websites using HTML." />
+    <meta name="description" content="Portfolio of Uttam Siravi. A Web Developer who can only make websites using HTML." />
     <meta name="author" content="Uttam Siravi" />
     <title>Uttam Siravi | Portfolio</title>
     <link rel="icon" href="dev.png" type="image/png" />
