--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <p>&copy; 2025 Uttam Siravi. Built with 💻</p>
+        <p>&copy; 2025 Uttam Siravi. Built with 🖥</p>
       </div>
     </footer>
 
